@@ -1,17 +1,21 @@
 == In General ==
 - Disk space checks when restoring/backing up
-- File System will restore to their original location... How to do this on Windows?
+- File System restores files to their original location... But on Windows?
 - Check permissions in testConnection()
 - When performing a backup, close previous notifications. This way, we don't
   have two open at once if an error occurs early on
-- SSH public key authentication
-- CLI restore app
-
-== Before 1.43.3 final ==
-- Update documentation
-- Split the overlapping parts of operations/* into engines/*
-- Fix the cross-os uploading \ problem
+- Fix the cross-os uploading / problem
 --> happens on return sftp.put(src, os.path.join(dst, os.path.basename(src)) )
     in sftp.py
+
+== Ideas for later ==
 - Possibility of interactive mode, when set to False disables -v for speedups
-- Perserve permissions on receive folder?
+- Perserve permissions on receiving folder?
+- Split the overlapping parts of operations/* into engines/*
+- CLI restore app
+- SSH public key authentication
+
+== Before 1.43.3 final ==
+- Update documentation & include only html in dist
+- fwbackups cron fstab class
+--> Don't sleep for each add(), only for each write()
