@@ -7,6 +7,8 @@
     - Run the "before command" prior to the preparation and cleanup steps (fixes
       RH #604682)
     - Make the port selection a spinbutton (forces numeric entry only)
+    - Implement tokens (string replacements) for the user-specified before/after
+      backup commands
     
   * Sat Apr 24 2010 Stewart Adam <s.adam at diffingo.com>
     - Fix a bug where the sensitivity of the incremental checkbutton was
